-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 23
-
Component/s: hotspot
-
b16
`assert(CollectedHeap::min_fill_size() == 2, "inv");` is too strong for larger obj-alignment.
Step to reproduce:
TEST=gc/stress/gcbasher/TestGCBasherWithParallel.java JTREG_JAVA_OPTIONS="-XX:+UseParallelGC -XX:ObjectAlignmentInBytes=64"
Step to reproduce:
TEST=gc/stress/gcbasher/TestGCBasherWithParallel.java JTREG_JAVA_OPTIONS="-XX:+UseParallelGC -XX:ObjectAlignmentInBytes=64"
- relates to
-
JDK-8325725 Parallel: Refactor PSParallelCompact::fill_dense_prefix_end
-
- Resolved
-