8328602: Parallel: Incorrect assertion in fill_dense_prefix_end

Reviewed-by: gli, iwalulya